Fix bootstrap card alignment

--- a/components/Card/Card.scss
+++ b/components/Card/Card.scss
@@ -14,6 +14,10 @@ $transition: all 3s ease-in-out;
   cursor: pointer;
 }
 
+.row-item:nth-child(3n + 1) {
+  clear: left;
+}
+
 .card {
   position: relative;
   overflow: hidden;
